fixed: change action file

--- a/src/main/resources/html/form.html
+++ b/src/main/resources/html/form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form action="/form" method="post">
-    First Name : <input type="text" name="firstName"> <br>
+    First name: <input type="text" name="firstName"> <br>
     Last Name : <input type="text" name="lastName"> <br>
     <input type="submit" value="Say Hello">
 </form>
